v3 arch is ready... just the final bug... as always... is sound capture... sigh
